added new styling

--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,30 @@
     right: 570px;
     left: 570px
 }
+
+#getfood
+{
+    font-size: 17px;
+    line-height: 25px;
+    
+    background-color:rgb(239, 241, 243) ;
+}
+span{
+    font-size: 180px;
+    
+}
+.nicole{
+    border-radius: 999px;
+}
+
+#month
+{
+    font-size: 25px;
+}
+#price,#howit{
+    background-color: rgb(239, 241, 243);
+}
+#paise1,#paise2,#paise3{
+    font-size: 55px;
+    color: orange;
+}
