--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,36 @@ span{
     font-size: 55px;
     color: orange;
 }
+
+#fas1
+{
+    color: orange;
+
+}
+#cities,#form,#getfood,#howit{
+    padding: 100px;
+}
+#form{
+    width: 850px;
+  
+}
+#foot{
+    padding: 50px;
+    font-size: 15px;
+}
+#footicons{
+    position: fixed;
+  left: 600px;
+  top: 0px;
+}
+
+ .fimage{
+    transform: scale(1.1);
+    opacity: 0.7;
+}
+.fimage:hover
+{
+    transform: scale(0.9);
+    opacity: 1;
+}
+ 
